--- a/index.html
+++ b/index.html
@@ -9,7 +9,6 @@
 
 <style>
 *{margin:0;padding:0;box-sizing:border-box;font-family:'Poppins',sans-serif;}
-
 body{
   min-height:100vh;
   display:flex;
@@ -17,7 +16,6 @@ body{
   align-items:center;
   background:linear-gradient(135deg,#ff6a88,#ff99ac);
 }
-
 .container{
   width:92%;
   max-width:420px;
@@ -28,7 +26,6 @@ body{
   text-align:center;
   box-shadow:0 20px 40px rgba(0,0,0,.25);
 }
-
 h1{color:#ff2f6d;margin-bottom:5px;}
 h2{font-weight:400;color:#fff;margin-bottom:16px;}
 
@@ -37,9 +34,7 @@ h2{font-weight:400;color:#fff;margin-bottom:16px;}
   border-radius:22px;
   overflow:hidden;
   background:#fff;
-  box-shadow:0 10px 20px rgba(0,0,0,.2);
 }
-
 #slider{
   width:100%;
   height:auto;
@@ -55,8 +50,6 @@ h2{font-weight:400;color:#fff;margin-bottom:16px;}
   color:#fff;
   background:rgba(255,255,255,0.18);
   border-radius:20px;
-  backdrop-filter:blur(6px);
-  text-shadow:0 2px 6px rgba(0,0,0,.25);
 }
 
 .buttons{
@@ -65,26 +58,15 @@ h2{font-weight:400;color:#fff;margin-bottom:16px;}
   gap:18px;
   margin:18px 0;
 }
-
 button{
   border:none;
   border-radius:30px;
   padding:12px 28px;
   font-size:15px;
   cursor:pointer;
-  transition:.3s;
 }
-
-#yes{
-  background:linear-gradient(135deg,#ff3366,#ff6a88);
-  color:#fff;
-}
-
-#no{
-  background:#eee;
-  color:#333;
-  position:relative;
-}
+#yes{background:#ff3366;color:#fff;}
+#no{background:#eee;color:#333;position:relative;}
 
 .action{
   width:100%;
@@ -94,11 +76,7 @@ button{
   color:#ff3366;
 }
 
-.footer{
-  font-size:12px;
-  color:#fff;
-  margin-top:12px;
-}
+.footer{font-size:12px;color:#fff;margin-top:12px;}
 
 .popup{
   position:fixed;
@@ -107,57 +85,38 @@ button{
   display:none;
   justify-content:center;
   align-items:center;
-  z-index:99;
 }
-
 .card{
-  background:rgba(255,255,255,.25);
-  backdrop-filter:blur(12px);
+  background:#fff;
   padding:26px;
   border-radius:26px;
   width:90%;
   max-width:380px;
   text-align:center;
 }
-
 .okay{
   margin-top:16px;
-  background:linear-gradient(135deg,#ff3366,#ff6a88);
+  background:#ff3366;
   color:white;
   padding:10px 28px;
   border-radius:30px;
 }
-
-.game-area{
-  position:relative;
-  height:260px;
-  overflow:hidden;
-}
-
+.game-area{position:relative;height:260px;overflow:hidden;}
 .heart{
   position:absolute;
   bottom:-40px;
   font-size:26px;
-  cursor:pointer;
   animation:fly 3s linear forwards;
 }
-
 @keyframes fly{to{bottom:300px;}}
-
 .quiz-btn{
   width:100%;
   margin:8px 0;
   padding:10px;
   border-radius:20px;
   border:2px solid #ff6a88;
-  background:white;
 }
-
-.quiz-btn.correct{
-  background:#4CAF50;
-  color:white;
-  border:none;
-}
+.quiz-btn.correct{background:#4CAF50;color:white;border:none;}
 </style>
 </head>
 
@@ -166,45 +125,47 @@ button{
 <audio id="bgMusic" src="music.mp3.mp3" loop></audio>
 
 <div class="container">
-  <h1>❤️ Mrs.Sneha Saha ❤️</h1>
-  <h2>Will you be my Valentine Bubuu🙄?</h2>
+<h1>❤️ Mrs.Sneha Saha ❤️</h1>
+<h2>Will you be my Valentine Bubuu🙄?</h2>
 
-  <div class="slider-box">
-    <img id="slider" src="pic1.jpg.jpeg">
-  </div>
+<div class="slider-box">
+<img id="slider" src="pic1.jpg.jpeg">
+</div>
 
-  <p class="love-text">
-    “BUBU, from the moment you entered my life 😭 everything changed 😤.<br>
-    Your smile lights my darkest days, your voice calms my chaos 😋<br>
-    and your presence feels like homee babyy 😽🌸💓”
-  </p>
+<p class="love-text">
+BUBU, from the moment you entered my life 😭 everything changed 😤.<br>
+Your smile lights my darkest days, your voice calms my chaos 😋<br>
+and your presence feels like homee babyy 😽🌸💓
+</p>
 
-  <div class="buttons">
-    <button id="yes">Yes 💖</button>
-    <button id="no">No 🙈</button>
-  </div>
+<div class="buttons">
+<button id="yes">Yes 💖</button>
+<button id="no">No 🙈</button>
+</div>
 
-  <button class="action" onclick="startHeartGame()">Play a little game 🎮</button>
-  <p class="footer">Every moment with you feels like a dream come true amar sonai😤</p>
+<button class="action" id="gameBtn">Play a little game 🎮</button>
+<p class="footer">Every moment with you feels like a dream come true amar sonai😤</p>
 </div>
 
 <div class="popup" id="popup">
-  <div class="card" id="popupContent"></div>
+<div class="card" id="popupContent"></div>
 </div>
 
 <script>
-const yes=document.getElementById("yes");
-const no=document.getElementById("no");
-const slider=document.getElementById("slider");
-const popup=document.getElementById("popup");
-const content=document.getElementById("popupContent");
+// ===== DOM =====
+const yes = document.getElementById("yes");
+const no = document.getElementById("no");
+const slider = document.getElementById("slider");
+const popup = document.getElementById("popup");
+const content = document.getElementById("popupContent");
+const gameBtn = document.getElementById("gameBtn");
 
-/* MUSIC */
+// ===== MUSIC =====
 document.addEventListener("click",()=>{
   document.getElementById("bgMusic").play().catch(()=>{});
 },{once:true});
 
-/* SLIDER */
+// ===== SLIDER =====
 const pics=["pic1.jpg.jpeg","pic2.jpg.jpeg","pic3.jpg.jpeg"];
 let pi=0;
 setInterval(()=>{
@@ -212,104 +173,63 @@ setInterval(()=>{
   slider.src=pics[pi];
 },3000);
 
-/* POPUP */
+// ===== POPUP =====
 function openPopup(html){content.innerHTML=html;popup.style.display="flex";}
 function closePopup(){popup.style.display="none";}
 
-/* YES */
-yes.onclick=()=>openPopup(`
-<h3>I knew it Babyyyyy 😭❤️</h3>
-<p>You are my Valentine - today and always🤧💗</p>
-<button class="okay" onclick="closePopup()">OKAY</button>
-`);
+// ===== YES =====
+yes.addEventListener("click",()=>{
+  openPopup(`
+    <h3>I knew it Babyyyy 😭❤️</h3>
+    <p>You are my Valentine forever 💗</p>
+    <button class="okay" onclick="closePopup()">OKAY</button>
+  `);
+});
 
-/* NO — EXACTLY AS YOU ASKED */
+// ===== NO (2nd CLICK POPUP) =====
 let noClicks=0;
-no.onclick=(e)=>{
+no.addEventListener("click",(e)=>{
   noClicks++;
   if(noClicks===1){
-    e.target.style.transform=
-      `translate(${Math.random()*140-70}px,${Math.random()*80-40}px)`;
+    e.target.style.transform=`translate(${Math.random()*120-60}px,${Math.random()*60-30}px)`;
   }else if(noClicks===2){
     openPopup(`
       <h3>HOW DARE YOU REJECTING MY OFFER!? 😾</h3>
-      <p>
-        Its just for formality 😽<br>
-        Option NO is invalid 🥰
-      </p>
-      <button class="okay" onclick="closePopup()">OKAY 😭</button>
+      <p>Its just for formality 😽<br>Option NO is invalid 🥰</p>
+      <button class="okay" onclick="closePopup()">SORRYYY 😭</button>
     `);
   }
-};
+});
 
-/* HEART GAME */
+// ===== HEART GAME =====
+gameBtn.addEventListener("click",startHeartGame);
+
 function startHeartGame(){
   let caught=0;
   openPopup(`
     <h3>Catch 3 hearts 💖</h3>
-    <p id="count">Hearts: 0 / 3</p>
+    <p id="count">0 / 3</p>
     <div class="game-area" id="area"></div>
   `);
-
   const area=document.getElementById("area");
-  const counter=document.getElementById("count");
+  const count=document.getElementById("count");
 
-  const interval=setInterval(()=>{
+  const int=setInterval(()=>{
     const h=document.createElement("div");
     h.className="heart";
     h.innerText="💖";
     h.style.left=Math.random()*90+"%";
     h.onclick=()=>{
       caught++;
-      counter.innerText=\`Hearts: \${caught} / 3\`;
+      count.innerText=`${caught} / 3`;
       h.remove();
       if(caught===3){
-        clearInterval(interval);
-        setTimeout(startQuiz,400);
+        clearInterval(int);
+        openPopup(`<h3>You won 💕</h3><button class="okay" onclick="closePopup()">OKAY</button>`);
       }
     };
     area.appendChild(h);
   },700);
-}
-
-/* QUIZ */
-const quiz=[
- {q:"Who loves me more?",o:["Sneha","Bubu","Sonai"],type:"any"},
- {q:"What I love the most?",o:["irritating sneha","loving sneha","touching sneha","all of these"],correct:3},
- {q:"Who gets more jealous faster?",o:["Sneha","Rishi","Both of them"],correct:2},
- {q:"How many kids we want?",o:["4","2","1","69"],correct:2},
- {q:"How much does Rishi loves you?",o:["0%","69%","100%","♾️"],correct:3}
-];
-
-let qi=0,score=0;
-
-function startQuiz(){qi=0;score=0;showQuiz();}
-
-function showQuiz(){
-  const q=quiz[qi];
-  openPopup(`
-    <h3>${q.q}</h3>
-    ${q.o.map((op,i)=>`<button class="quiz-btn" onclick="answer(${i},this)">${op}</button>`).join("")}
-  `);
-}
-
-function answer(i,btn){
-  const q=quiz[qi];
-  if(q.type==="any"||i===q.correct)score++;
-  btn.classList.add("correct");
-  setTimeout(()=>{
-    qi++;
-    qi<quiz.length?showQuiz():result();
-  },600);
-}
-
-function result(){
-  openPopup(`
-    <h3>Game complete Bubuuu💕</h3>
-    <p><b>Score: ${score} / ${quiz.length}</b></p>
-    <p>You love me the most amar sona bacchaa 😌❤️</p>
-    <button class="okay" onclick="closePopup()">OKAY</button>
-  `);
 }
 </script>
 
