--- a/index.html
+++ b/index.html
@@ -8,7 +8,8 @@
 <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600&display=swap" rel="stylesheet">
 
 <style>
-*{margin:0;padding:0;box-sizing:border-box;font-family:'Poppins',sans-serif;}
+*{margin:0;padding:0;box-sizing:border-box;font-family:Poppins,sans-serif}
+
 body{
   min-height:100vh;
   display:flex;
@@ -16,21 +17,20 @@ body{
   align-items:center;
   background:linear-gradient(135deg,#ff6a88,#ff99ac);
 }
+
 .container{
   width:92%;
   max-width:420px;
-  background:rgba(255,255,255,0.25);
-  backdrop-filter:blur(16px);
+  background:rgba(255,255,255,.25);
+  backdrop-filter:blur(14px);
   padding:26px;
   border-radius:30px;
   text-align:center;
-  box-shadow:0 25px 60px rgba(0,0,0,.3);
-  animation:fadeIn .8s ease;
+  box-shadow:0 20px 40px rgba(0,0,0,.25);
 }
-@keyframes fadeIn{from{opacity:0;transform:scale(.95)}to{opacity:1}}
 
-h1{color:#ff2f6d;margin-bottom:5px;}
-h2{font-weight:400;color:#fff;margin-bottom:16px;}
+h1{color:#ff2f6d}
+h2{color:#fff;font-weight:400;margin:10px 0 16px}
 
 .slider-box{
   width:100%;
@@ -38,21 +38,20 @@ h2{font-weight:400;color:#fff;margin-bottom:16px;}
   overflow:hidden;
   background:#fff;
 }
+
 #slider{
   width:100%;
   height:auto;
-  object-fit:contain;
   display:block;
-  transition:opacity .5s;
+  object-fit:contain;
 }
 
 .love-text{
   margin-top:14px;
   padding:14px;
   font-size:14px;
-  line-height:1.6;
   color:#fff;
-  background:rgba(255,255,255,0.18);
+  background:rgba(255,255,255,.18);
   border-radius:20px;
 }
 
@@ -62,59 +61,44 @@ h2{font-weight:400;color:#fff;margin-bottom:16px;}
   gap:18px;
   margin:18px 0;
 }
+
 button{
   border:none;
   border-radius:30px;
-  padding:12px 28px;
+  padding:12px 26px;
   font-size:15px;
   cursor:pointer;
-  transition:.25s;
 }
-#yes{background:#ff3366;color:#fff;box-shadow:0 0 15px rgba(255,51,102,.6);}
-#yes:hover{transform:scale(1.05)}
-#no{background:#eee;color:#333;position:relative;}
+
+#yes{background:#ff3366;color:#fff}
+#no{background:#eee}
 
 .action{
   width:100%;
-  margin-top:10px;
-  background:white;
   border:2px solid #ff3366;
+  background:white;
   color:#ff3366;
-  box-shadow:0 0 15px rgba(255,51,102,.4);
 }
 
-.footer{font-size:12px;color:#fff;margin-top:12px;}
+.footer{font-size:12px;color:#fff;margin-top:10px}
 
+/* POPUP */
 .popup{
   position:fixed;
   inset:0;
-  background:rgba(0,0,0,.65);
+  background:rgba(0,0,0,.6);
   display:none;
   justify-content:center;
   align-items:center;
-  z-index:99;
 }
-.card{
-  background:#fff;
-  padding:26px;
-  border-radius:26px;
-  width:90%;
-  max-width:380px;
-  text-align:center;
-  animation:pop .4s ease;
-}
-@keyframes pop{from{transform:scale(.7)}to{transform:scale(1)}}
 
-.angry{
-  animation:shake .4s infinite;
-  box-shadow:0 0 25px red;
-}
-@keyframes shake{
-  0%{transform:translateX(0)}
-  25%{transform:translateX(-5px)}
-  50%{transform:translateX(5px)}
-  75%{transform:translateX(-5px)}
-  100%{transform:translateX(0)}
+.card{
+  background:white;
+  padding:24px;
+  border-radius:24px;
+  width:90%;
+  max-width:360px;
+  text-align:center;
 }
 
 .okay{
@@ -125,6 +109,7 @@ button{
   border-radius:30px;
 }
 
+/* QUIZ */
 .quiz-btn{
   width:100%;
   margin:8px 0;
@@ -132,11 +117,6 @@ button{
   border-radius:20px;
   border:2px solid #ff6a88;
   background:white;
-}
-.quiz-btn.correct{
-  background:#4CAF50;
-  color:white;
-  border:none;
 }
 </style>
 </head>
@@ -146,145 +126,120 @@ button{
 <audio id="bgMusic" src="music.mp3.mp3" loop></audio>
 
 <div class="container">
-<h1>❤️ Mrs.Sneha Saha ❤️</h1>
-<h2>Will you be my Valentine Bubuu🙄?</h2>
+  <h1>❤️ Mrs.Sneha Saha ❤️</h1>
+  <h2>Will you be my Valentine Bubuu🙄?</h2>
 
-<div class="slider-box">
-<img id="slider" src="pic1.jpg.jpeg">
-</div>
+  <div class="slider-box">
+    <img id="slider" src="pic1.jpg.jpeg">
+  </div>
 
-<p class="love-text">
-BUBU, from the moment you entered my life😭 everything changed😤.
-Your smile lights my darkest days, your voice clams my chaos😋
-and your presence feels like homee babyy😽🌸💓
-</p>
+  <p class="love-text">
+    “BUBU, from the moment you entered my life 😭 everything changed 😤.<br>
+    Your smile lights my darkest days, your voice calms my chaos 😋<br>
+    and your presence feels like homee babyy 😽🌸💓”
+  </p>
 
-<div class="buttons">
-<button id="yes">Yes 💖</button>
-<button id="no">No 🙈</button>
-</div>
+  <div class="buttons">
+    <button id="yes">Yes 💖</button>
+    <button id="no">No 🙈</button>
+  </div>
 
-<button class="action" id="quizBtn">Answer honestly 😌</button>
-<p class="footer">Every moment with you feels like a dream come true amar sonai😤</p>
+  <button class="action" id="startGame">Answer honestly 😌</button>
+  <p class="footer">Every moment with you feels like a dream come true amar sonai😤</p>
 </div>
 
 <div class="popup" id="popup">
-<div class="card" id="popupContent"></div>
+  <div class="card" id="popupContent"></div>
 </div>
 
 <script>
-// ===== DOM =====
-const yes=document.getElementById("yes");
-const no=document.getElementById("no");
-const slider=document.getElementById("slider");
-const popup=document.getElementById("popup");
-const content=document.getElementById("popupContent");
-const quizBtn=document.getElementById("quizBtn");
-
-// ===== MUSIC =====
+/* MUSIC */
 document.addEventListener("click",()=>{
- document.getElementById("bgMusic").play().catch(()=>{});
+  document.getElementById("bgMusic").play().catch(()=>{});
 },{once:true});
 
-// ===== SLIDER =====
+/* SLIDER */
 const pics=["pic1.jpg.jpeg","pic2.jpg.jpeg","pic3.jpg.jpeg"];
 let pi=0;
 setInterval(()=>{
- slider.style.opacity=0;
- setTimeout(()=>{
   pi=(pi+1)%pics.length;
   slider.src=pics[pi];
-  slider.style.opacity=1;
- },300);
 },3000);
 
-// ===== POPUP =====
-function openPopup(html,angry=false){
- content.innerHTML=html;
- content.className="card"+(angry?" angry":"");
- popup.style.display="flex";
+/* POPUP */
+const popup=document.getElementById("popup");
+const content=document.getElementById("popupContent");
+function openPopup(html){
+  content.innerHTML=html;
+  popup.style.display="flex";
 }
-function closePopup(){popup.style.display="none";}
+function closePopup(){
+  popup.style.display="none";
+}
 
-// ===== YES =====
-yes.onclick=()=>{
- openPopup(`
- <h3>I knew it Babyyyy 😭❤️</h3>
- <p>You are my Valentine forever 💗</p>
- <button class="okay" onclick="closePopup()">OKAY</button>
- `);
-};
-
-// ===== NO (2nd CLICK ANGRY) =====
-let noClicks=0;
-no.onclick=(e)=>{
- noClicks++;
- if(noClicks===1){
-  e.target.style.transform=\`translate(\${Math.random()*120-60}px,\${Math.random()*60-30}px)\`;
- }else if(noClicks===2){
+/* YES */
+document.getElementById("yes").addEventListener("click",()=>{
   openPopup(`
-  <h3>HOW DARE YOU REJECTING MY OFFER!?😾</h3>
-  <p>Its just for formality😽<br>Option NO is invalid🥰</p>
-  <button class="okay" onclick="closePopup()">SORRYYY😭</button>
-  `,true);
- }
-};
+    <h3>I knew it Babyyyyy 😭❤️</h3>
+    <p>You are my Valentine - today and always🤧💗</p>
+    <button class="okay" onclick="closePopup()">OKAY</button>
+  `);
+});
 
-// ===== QUIZ (SCORE FIXED 5/5) =====
-quizBtn.onclick=startQuiz;
+/* NO — 2 CLICKS */
+let noClicks=0;
+document.getElementById("no").addEventListener("click",()=>{
+  noClicks++;
+  if(noClicks===1){
+    document.getElementById("no").style.transform=
+      `translate(${Math.random()*120-60}px,${Math.random()*60-30}px)`;
+  }
+  if(noClicks===2){
+    openPopup(`
+      <h3>HOW DARE YOU REJECTING MY OFFER!?😾</h3>
+      <p>Its just for formality😽<br>Option NO is invalid🥰</p>
+      <button class="okay" onclick="closePopup()">OKAY</button>
+    `);
+  }
+});
 
+/* QUIZ */
 const quiz=[
-{
- q:"Who loves me more?",
- o:["Sneha","Bubu","Sonai"],
- c:[0,1,2]
-},
-{
- q:"What i love the most?",
- o:["irritating sneha","loving sneha","touching sneha","all of these"],
- c:[3]
-},
-{
- q:"Who gest more jealous faster?",
- o:["Sneha","Rishi","Both of them"],
- c:[2]
-},
-{
- q:"How many kids we want?",
- o:["4","2","1","69"],
- c:[2]
-},
-{
- q:"How much does Rishi loves you?",
- o:["0%","69%","100%","♾️"],
- c:[3]
-}
+ {q:"Who loves me more?",o:["Sneha","Bubu","Sonai"],any:true},
+ {q:"What i love the most?",o:["irritating sneha","loving sneha","touching sneha","all of these"],c:3},
+ {q:"Who gest more jealous faster?",o:["Sneha","Rishi","Both of them"],c:2},
+ {q:"How many kids we want?",o:["4","2","1","69"],c:2},
+ {q:"How much does Rishi loves you?",o:["0%","69%","100%","♾️"],c:3}
 ];
 
 let qi=0,score=0;
 
-function startQuiz(){
- qi=0;score=0;
- showQ();
-}
+document.getElementById("startGame").onclick=()=>{
+  qi=0;score=0;showQ();
+};
 
 function showQ(){
- const q=quiz[qi];
- openPopup(`
- <h3>${q.q}</h3>
- ${q.o.map((x,i)=>`<button class="quiz-btn" onclick="pick(${i})">${x}</button>`).join("")}
- `);
+  const q=quiz[qi];
+  openPopup(`
+    <h3>${q.q}</h3>
+    ${q.o.map((x,i)=>`<button class="quiz-btn" onclick="ans(${i})">${x}</button>`).join("")}
+  `);
 }
 
-function pick(i){
- if(quiz[qi].c.includes(i)) score++;
- qi++;
- if(qi<quiz.length) showQ();
- else openPopup(`
- <h3>You scored ${score}/5 😭❤️</h3>
- <p>Perfect as expected babyyy 😽</p>
- <button class="okay" onclick="closePopup()">OKAY</button>
- `);
+function ans(i){
+  const q=quiz[qi];
+  if(q.any || i===q.c) score++;
+  qi++;
+  qi<quiz.length ? showQ() : result();
+}
+
+function result(){
+  openPopup(`
+    <h3>Game complete Bubuuu💕</h3>
+    <p><b>Score: ${score} / ${quiz.length}</b></p>
+    <p>You love me the most amar sona bacchaa 😌❤️</p>
+    <button class="okay" onclick="closePopup()">OKAY</button>
+  `);
 }
 </script>
 
