--- a/index.html
+++ b/index.html
@@ -4,141 +4,34 @@
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>Sneha ❤️</title>
-
 <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600&display=swap" rel="stylesheet">
 
 <style>
 *{margin:0;padding:0;box-sizing:border-box;font-family:Poppins,sans-serif}
-
-body{
-  min-height:100vh;
-  display:flex;
-  justify-content:center;
-  align-items:center;
-  background:linear-gradient(135deg,#ff6a88,#ff99ac);
-}
-
-.container{
-  width:92%;
-  max-width:420px;
-  background:rgba(255,255,255,.25);
-  backdrop-filter:blur(14px);
-  padding:26px;
-  border-radius:30px;
-  text-align:center;
-  box-shadow:0 20px 40px rgba(0,0,0,.25);
-}
-
-h1{color:#ff2f6d}
-h2{color:#fff;font-weight:400;margin:10px 0 16px}
-
-.slider-box{
-  width:100%;
-  border-radius:22px;
-  overflow:hidden;
-  background:#fff;
-}
-
-#slider{
-  width:100%;
-  height:auto;
-  display:block;
-  object-fit:contain;
-}
-
-.love-text{
-  margin-top:14px;
-  padding:14px;
-  font-size:14px;
-  color:#fff;
-  background:rgba(255,255,255,.18);
-  border-radius:20px;
-}
-
-.buttons{
-  display:flex;
-  justify-content:center;
-  gap:18px;
-  margin:18px 0;
-}
-
-button{
-  border:none;
-  border-radius:30px;
-  padding:12px 26px;
-  font-size:15px;
-  cursor:pointer;
-}
-
+body{min-height:100vh;display:flex;justify-content:center;align-items:center;background:linear-gradient(135deg,#ff6a88,#ff99ac)}
+.container{width:92%;max-width:420px;background:rgba(255,255,255,.25);backdrop-filter:blur(14px);padding:26px;border-radius:30px;text-align:center}
+h1{color:#ff2f6d} h2{color:#fff;font-weight:400;margin:10px 0}
+.slider-box{border-radius:22px;overflow:hidden;background:#fff}
+#slider{width:100%;display:block;object-fit:contain}
+.love-text{margin-top:14px;padding:14px;font-size:14px;color:#fff;background:rgba(255,255,255,.18);border-radius:20px}
+.buttons{display:flex;gap:18px;justify-content:center;margin:18px 0}
+button{border:none;border-radius:30px;padding:12px 26px;font-size:15px;cursor:pointer}
 #yes{background:#ff3366;color:#fff}
 #no{background:#eee}
-
-.action{
-  width:100%;
-  margin-top:8px;
-  border:2px solid #ff3366;
-  background:white;
-  color:#ff3366;
-}
-
+.action{width:100%;border:2px solid #ff3366;background:white;color:#ff3366}
 .footer{font-size:12px;color:#fff;margin-top:10px}
 
-/* POPUP */
-.popup{
-  position:fixed;
-  inset:0;
-  background:rgba(0,0,0,.6);
-  display:none;
-  justify-content:center;
-  align-items:center;
-  z-index:10;
-}
+/* popup */
+.popup{position:fixed;inset:0;background:rgba(0,0,0,.6);display:none;justify-content:center;align-items:center;z-index:10}
+.card{background:white;padding:24px;border-radius:24px;width:90%;max-width:360px;text-align:center}
+.okay{margin-top:16px;background:#ff3366;color:white;padding:10px 28px;border-radius:30px}
 
-.card{
-  background:white;
-  padding:24px;
-  border-radius:24px;
-  width:90%;
-  max-width:360px;
-  text-align:center;
-}
+/* game */
+.game-area{position:relative;height:240px;overflow:hidden}
+.heart{position:absolute;bottom:-40px;font-size:28px;cursor:pointer;animation:fly 3s linear forwards}
+@keyframes fly{to{bottom:260px}}
 
-.okay{
-  margin-top:16px;
-  background:#ff3366;
-  color:white;
-  padding:10px 28px;
-  border-radius:30px;
-}
-
-/* HEART GAME */
-.game-area{
-  position:relative;
-  height:240px;
-  overflow:hidden;
-}
-
-.heart{
-  position:absolute;
-  bottom:-40px;
-  font-size:28px;
-  animation:fly 3s linear forwards;
-  cursor:pointer;
-}
-
-@keyframes fly{
-  to{bottom:260px}
-}
-
-/* QUIZ */
-.quiz-btn{
-  width:100%;
-  margin:8px 0;
-  padding:10px;
-  border-radius:20px;
-  border:2px solid #ff6a88;
-  background:white;
-}
+.quiz-btn{width:100%;margin:8px 0;padding:10px;border-radius:20px;border:2px solid #ff6a88;background:white}
 </style>
 </head>
 
@@ -147,151 +40,125 @@ button{
 <audio id="bgMusic" src="music.mp3.mp3" loop></audio>
 
 <div class="container">
-  <h1>❤️ Mrs.Sneha Saha ❤️</h1>
-  <h2>Will you be my Valentine Bubuu🙄?</h2>
+<h1>❤️ Mrs.Sneha Saha ❤️</h1>
+<h2>Will you be my Valentine Bubuu🙄?</h2>
 
-  <div class="slider-box">
-    <img id="slider" src="pic1.jpg.jpeg">
-  </div>
+<div class="slider-box">
+<img id="slider" src="pic1.jpg.jpeg">
+</div>
 
-  <p class="love-text">
-    “BUBU, from the moment you entered my life 😭 everything changed 😤.<br>
-    Your smile lights my darkest days, your voice calms my chaos 😋<br>
-    and your presence feels like homee babyy 😽🌸💓”
-  </p>
+<p class="love-text">
+“BUBU, from the moment you entered my life 😭 everything changed 😤.<br>
+Your smile lights my darkest days, your voice calms my chaos 😋<br>
+and your presence feels like homee babyy 😽🌸💓”
+</p>
 
-  <div class="buttons">
-    <button id="yes">Yes 💖</button>
-    <button id="no">No 🙈</button>
-  </div>
+<div class="buttons">
+<button id="yes">Yes 💖</button>
+<button id="no">No 🙈</button>
+</div>
 
-  <button class="action" id="playGame">Play a little game 🎮</button>
-  <p class="footer">Every moment with you feels like a dream come true amar sonai😤</p>
+<button class="action" id="playGame">Play a little game 🎮</button>
+<p class="footer">Every moment with you feels like a dream come true amar sonai😤</p>
 </div>
 
 <div class="popup" id="popup">
-  <div class="card" id="popupContent"></div>
+<div class="card" id="popupContent"></div>
 </div>
 
 <script>
-/* MUSIC */
-document.addEventListener("click",()=>{
-  document.getElementById("bgMusic").play().catch(()=>{});
-},{once:true});
-
-/* SLIDER */
-const pics=["pic1.jpg.jpeg","pic2.jpg.jpeg","pic3.jpg.jpeg"];
-let pi=0;
-setInterval(()=>{
-  pi=(pi+1)%pics.length;
-  slider.src=pics[pi];
-},3000);
-
-/* POPUP */
+/* SAFE ELEMENT BINDING */
+const yes=document.getElementById("yes");
+const no=document.getElementById("no");
+const slider=document.getElementById("slider");
 const popup=document.getElementById("popup");
 const content=document.getElementById("popupContent");
-function openPopup(html){
-  content.innerHTML=html;
-  popup.style.display="flex";
-}
-function closePopup(){
-  popup.style.display="none";
-}
+const playGame=document.getElementById("playGame");
+const music=document.getElementById("bgMusic");
 
-/* YES */
-yes.onclick=()=>openPopup(`
-<h3>I knew it Babyyyyy 😭❤️</h3>
+/* music */
+document.addEventListener("click",()=>music.play().catch(()=>{}),{once:true});
+
+/* slider */
+const pics=["pic1.jpg.jpeg","pic2.jpg.jpeg","pic3.jpg.jpeg"];
+let pi=0;
+setInterval(()=>{pi=(pi+1)%pics.length;slider.src=pics[pi]},3000);
+
+/* popup */
+function openPopup(html){content.innerHTML=html;popup.style.display="flex"}
+function closePopup(){popup.style.display="none"}
+
+/* yes */
+yes.addEventListener("click",()=>{
+openPopup(`<h3>I knew it Babyyyyy 😭❤️</h3>
 <p>You are my Valentine - today and always🤧💗</p>
-<button class="okay" onclick="closePopup()">OKAY</button>
-`);
+<button class="okay" onclick="closePopup()">OKAY</button>`);
+});
 
-/* NO BUTTON */
+/* no */
 let noClicks=0;
-no.onclick=()=>{
-  noClicks++;
-  if(noClicks===1){
-    no.style.transform=`translate(${Math.random()*120-60}px,${Math.random()*60-30}px)`;
-  }
-  if(noClicks===2){
-    openPopup(`
-      <h3>HOW DARE YOU REJECTING MY OFFER!?😾</h3>
-      <p>Its just for formality😽<br>Option NO is invalid🥰</p>
-      <button class="okay" onclick="closePopup()">OKAY</button>
-    `);
-  }
+no.addEventListener("click",()=>{
+noClicks++;
+if(noClicks===1){
+no.style.transform=`translate(${Math.random()*120-60}px,${Math.random()*60-30}px)`;
+}
+if(noClicks===2){
+openPopup(`<h3>HOW DARE YOU REJECTING MY OFFER!?😾</h3>
+<p>Its just for formality😽<br>Option NO is invalid🥰</p>
+<button class="okay" onclick="closePopup()">OKAY</button>`);
+}
+});
+
+/* heart game */
+playGame.addEventListener("click",startGame);
+let spawn;
+
+function startGame(){
+let caught=0;
+clearInterval(spawn);
+openPopup(`<h3>Catch 3 hearts 💖</h3><p id="c">Hearts: 0 / 3</p><div class="game-area" id="area"></div>`);
+const area=document.getElementById("area");
+const c=document.getElementById("c");
+
+spawn=setInterval(()=>{
+const h=document.createElement("div");
+h.className="heart";
+h.textContent="💖";
+h.style.left=Math.random()*90+"%";
+h.onclick=()=>{
+caught++;c.textContent=`Hearts: ${caught} / 3`;h.remove();
+if(caught===3){clearInterval(spawn);setTimeout(startQuiz,400);}
 };
-
-/* HEART GAME */
-document.getElementById("playGame").onclick=startHeartGame;
-
-function startHeartGame(){
-  let caught=0;
-  openPopup(`
-    <h3>Catch 3 hearts 💖</h3>
-    <p id="count">Hearts: 0 / 3</p>
-    <div class="game-area" id="area"></div>
-  `);
-
-  const area=document.getElementById("area");
-  const counter=document.getElementById("count");
-
-  const spawn=setInterval(()=>{
-    const h=document.createElement("div");
-    h.className="heart";
-    h.innerText="💖";
-    h.style.left=Math.random()*90+"%";
-    h.onclick=()=>{
-      caught++;
-      counter.innerText=\`Hearts: \${caught} / 3\`;
-      h.remove();
-      if(caught===3){
-        clearInterval(spawn);
-        setTimeout(startQuiz,400);
-      }
-    };
-    area.appendChild(h);
-  },700);
+area.appendChild(h);
+},700);
 }
 
-/* QUIZ */
+/* quiz */
 const quiz=[
- {q:"Who loves me more?",o:["Sneha","Bubu","Sonai"],any:true},
- {q:"What i love the most?",o:["irritating sneha","loving sneha","touching sneha","all of these"],c:3},
- {q:"Who gest more jealous faster?",o:["Sneha","Rishi","Both of them"],c:2},
- {q:"How many kids we want?",o:["4","2","1","69"],c:2},
- {q:"How much does Rishi loves you?",o:["0%","69%","100%","♾️"],c:3}
+{q:"Who loves me more?",o:["Sneha","Bubu","Sonai"],any:true},
+{q:"What i love the most?",o:["irritating sneha","loving sneha","touching sneha","all of these"],c:3},
+{q:"Who gest more jealous faster?",o:["Sneha","Rishi","Both of them"],c:2},
+{q:"How many kids we want?",o:["4","2","1","69"],c:2},
+{q:"How much does Rishi loves you?",o:["0%","69%","100%","♾️"],c:3}
 ];
 
 let qi=0,score=0;
-
-function startQuiz(){
-  qi=0;score=0;showQ();
-}
-
+function startQuiz(){qi=0;score=0;showQ()}
 function showQ(){
-  const q=quiz[qi];
-  openPopup(`
-    <h3>${q.q}</h3>
-    ${q.o.map((x,i)=>`<button class="quiz-btn" onclick="ans(${i})">${x}</button>`).join("")}
-  `);
+const q=quiz[qi];
+openPopup(`<h3>${q.q}</h3>`+q.o.map((x,i)=>`<button class="quiz-btn" onclick="ans(${i})">${x}</button>`).join(""));
 }
-
 function ans(i){
-  const q=quiz[qi];
-  if(q.any || i===q.c) score++;
-  qi++;
-  qi<quiz.length ? showQ() : result();
+const q=quiz[qi];
+if(q.any||i===q.c)score++;
+qi<quiz.length-1?(qi++,showQ()):result();
 }
-
 function result(){
-  openPopup(`
-    <h3>Game complete Bubuuu💕</h3>
-    <p><b>Score: ${score} / ${quiz.length}</b></p>
-    <p>You love me the most amar sona bacchaa 😌❤️</p>
-    <button class="okay" onclick="closePopup()">OKAY</button>
-  `);
+openPopup(`<h3>Game complete Bubuuu💕</h3>
+<p><b>Score: ${score} / ${quiz.length}</b></p>
+<p>You love me the most amar sona bacchaa 😌❤️</p>
+<button class="okay" onclick="closePopup()">OKAY</button>`);
 }
 </script>
-
 </body>
 </html>
