--- a/index.html
+++ b/index.html
@@ -7,32 +7,209 @@
 <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600&display=swap" rel="stylesheet">
 
 <style>
-*{margin:0;padding:0;box-sizing:border-box;font-family:Poppins,sans-serif}
-body{min-height:100vh;display:flex;justify-content:center;align-items:center;background:linear-gradient(135deg,#ff6a88,#ff99ac)}
-.container{width:92%;max-width:420px;background:rgba(255,255,255,.25);backdrop-filter:blur(14px);padding:26px;border-radius:30px;text-align:center}
-h1{color:#ff2f6d} h2{color:#fff;font-weight:400;margin:10px 0}
-.slider-box{border-radius:22px;overflow:hidden;background:#fff}
-#slider{width:100%;display:block;object-fit:contain}
-.love-text{margin-top:14px;padding:14px;font-size:14px;color:#fff;background:rgba(255,255,255,.18);border-radius:20px}
-.buttons{display:flex;gap:18px;justify-content:center;margin:18px 0}
-button{border:none;border-radius:30px;padding:12px 26px;font-size:15px;cursor:pointer}
-#yes{background:#ff3366;color:#fff}
-#no{background:#eee}
-.action{width:100%;border:2px solid #ff3366;background:white;color:#ff3366}
-.footer{font-size:12px;color:#fff;margin-top:10px}
+*{
+  margin:0;
+  padding:0;
+  box-sizing:border-box;
+  font-family:'Poppins',sans-serif;
+}
 
-/* popup */
-.popup{position:fixed;inset:0;background:rgba(0,0,0,.6);display:none;justify-content:center;align-items:center;z-index:10}
-.card{background:white;padding:24px;border-radius:24px;width:90%;max-width:360px;text-align:center}
-.okay{margin-top:16px;background:#ff3366;color:white;padding:10px 28px;border-radius:30px}
+body{
+  min-height:100vh;
+  display:flex;
+  justify-content:center;
+  align-items:center;
+  background:
+    radial-gradient(circle at top, #ffd1dc, transparent 60%),
+    linear-gradient(135deg,#ff6a88,#ff99ac);
+}
 
-/* game */
-.game-area{position:relative;height:240px;overflow:hidden}
-.heart{position:absolute;bottom:-40px;font-size:28px;cursor:pointer;animation:fly 3s linear forwards}
-@keyframes fly{to{bottom:260px}}
+/* MAIN CARD */
+.container{
+  width:92%;
+  max-width:420px;
+  background:rgba(255,255,255,0.28);
+  backdrop-filter:blur(18px);
+  -webkit-backdrop-filter:blur(18px);
+  padding:28px;
+  border-radius:34px;
+  text-align:center;
+  box-shadow:
+    0 25px 60px rgba(0,0,0,.25),
+    inset 0 0 0 1px rgba(255,255,255,.25);
+}
 
-.quiz-btn{width:100%;margin:8px 0;padding:10px;border-radius:20px;border:2px solid #ff6a88;background:white}
+/* HEADINGS */
+h1{
+  color:#ff2f6d;
+  font-weight:600;
+  letter-spacing:.4px;
+}
+h2{
+  font-weight:400;
+  color:#fff;
+  margin:10px 0 18px;
+  text-shadow:0 2px 6px rgba(0,0,0,.25);
+}
+
+/* IMAGE */
+.slider-box{
+  width:100%;
+  border-radius:26px;
+  overflow:hidden;
+  background:#fff;
+  box-shadow:0 14px 28px rgba(0,0,0,.25);
+}
+
+#slider{
+  width:100%;
+  height:auto;
+  object-fit:contain;
+  display:block;
+}
+
+/* LOVE TEXT */
+.love-text{
+  margin-top:16px;
+  padding:16px;
+  font-size:14px;
+  line-height:1.7;
+  color:#fff;
+  background:rgba(255,255,255,0.2);
+  border-radius:22px;
+  backdrop-filter:blur(8px);
+  text-shadow:0 2px 6px rgba(0,0,0,.35);
+  box-shadow:inset 0 0 0 1px rgba(255,255,255,.25);
+}
+
+/* BUTTONS */
+.buttons{
+  display:flex;
+  justify-content:center;
+  gap:18px;
+  margin:20px 0;
+}
+
+button{
+  border:none;
+  border-radius:30px;
+  padding:12px 30px;
+  font-size:15px;
+  cursor:pointer;
+  transition:.25s ease;
+}
+
+button:active{
+  transform:scale(.96);
+}
+
+#yes{
+  background:linear-gradient(135deg,#ff3366,#ff6a88);
+  color:#fff;
+  box-shadow:0 10px 20px rgba(255,51,102,.45);
+}
+
+#no{
+  background:#f1f1f1;
+  color:#333;
+  box-shadow:0 8px 16px rgba(0,0,0,.2);
+}
+
+/* GAME BUTTON */
+.action{
+  width:100%;
+  margin-top:6px;
+  background:rgba(255,255,255,.95);
+  border:2px solid #ff3366;
+  color:#ff3366;
+  box-shadow:0 10px 22px rgba(0,0,0,.2);
+}
+
+/* FOOTER */
+.footer{
+  font-size:12px;
+  color:#fff;
+  margin-top:14px;
+  opacity:.95;
+}
+
+/* POPUP */
+.popup{
+  position:fixed;
+  inset:0;
+  background:rgba(0,0,0,.65);
+  display:none;
+  justify-content:center;
+  align-items:center;
+  z-index:99;
+}
+
+.card{
+  background:rgba(255,255,255,.3);
+  backdrop-filter:blur(16px);
+  -webkit-backdrop-filter:blur(16px);
+  padding:26px;
+  border-radius:28px;
+  width:90%;
+  max-width:380px;
+  text-align:center;
+  box-shadow:
+    0 20px 50px rgba(0,0,0,.35),
+    inset 0 0 0 1px rgba(255,255,255,.3);
+}
+
+.okay{
+  margin-top:18px;
+  background:linear-gradient(135deg,#ff3366,#ff6a88);
+  color:white;
+  padding:10px 32px;
+  border-radius:30px;
+  box-shadow:0 10px 22px rgba(255,51,102,.45);
+}
+
+/* GAME */
+.game-area{
+  position:relative;
+  height:260px;
+  overflow:hidden;
+}
+
+.heart{
+  position:absolute;
+  bottom:-40px;
+  font-size:30px;
+  cursor:pointer;
+  animation:fly 3s linear forwards;
+}
+
+@keyframes fly{
+  to{bottom:300px;}
+}
+
+/* QUIZ */
+.quiz-btn{
+  width:100%;
+  margin:8px 0;
+  padding:12px;
+  border-radius:22px;
+  border:2px solid #ff6a88;
+  background:white;
+  font-weight:500;
+}
+
+/* BLAST */
+.blast{
+  position:absolute;
+  font-size:20px;
+  animation:pop 1s forwards;
+}
+
+@keyframes pop{
+  0%{transform:scale(1);opacity:1}
+  100%{transform:scale(2);opacity:0}
+}
 </style>
+
 </head>
 
 <body>
