--- a/index.html
+++ b/index.html
@@ -217,8 +217,8 @@ button:active{
 <audio id="bgMusic" src="music.mp3.mp3" loop></audio>
 
 <div class="container">
-<h1>❤️ Mrs.Sneha Saha ❤️</h1>
-<h2>Will you be my Valentine Bubuu🙄?</h2>
+<h1>❤️Mrs.Sneha Saha❤️</h1>
+<h2>Will you be my Valentine Bubu🙄?</h2>
 
 <div class="slider-box">
 <img id="slider" src="pic1.jpg.jpeg">
@@ -282,7 +282,7 @@ no.style.transform=`translate(${Math.random()*120-60}px,${Math.random()*60-30}px
 if(noClicks===2){
 openPopup(`<h3>HOW DARE YOU REJECTING MY OFFER!?😾</h3>
 <p>Its just for formality😽<br>Option NO is invalid🥰</p>
-<button class="okay" onclick="closePopup()">OKAY</button>`);
+<button class="okay" onclick="closePopup()">SOLLYY😭</button>`);
 }
 });
 
