--- a/index.html
+++ b/index.html
@@ -333,7 +333,7 @@ qi<quiz.length-1?(qi++,showQ()):result();
 function result(){
 openPopup(`<h3>Game complete Bubuuu💕</h3>
 <p><b>Score: ${score} / ${quiz.length}</b></p>
-<p>You love me the most amar sona bacchaa 😌❤️</p>
+<p>No matter what your score is😤 You love me the most amar sona bacchaa 😌❤️</p>
 <button class="okay" onclick="closePopup()">OKAY</button>`);
 }
 </script>
